2013-11-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sfp-exceptions.c (__sfp_handle_exceptions): Handle
	FP_EX_DENORM.  Store result to volatile location after SSE division
	to close interrupt window.  Remove unneeded fwait after x87
	division since interrupt window will be closed by emitted fstp.
	Rewrite FP_EX_INEXACT handling.

2013-10-16  Release Manager

	* GCC 4.8.2 released.

2013-08-01  Maxim Kuvyrkov  <maxim@kugelworks.com>

	Backport from trunk: Fix licenses on several libgcc files.

	* config/aarch64/sfp-machine.h, config/aarch64/sync-cache.c,
	* config/i386/cpuinfo.c, config/ia64/unwind-ia64.h,
	* config/mips/vr4120-div.S: Fix license from GPL-3.0+ to
	GPL-3.0-with-GCC-exception.

2013-07-19  Georg-Johann Lay  <avr@gjlay.de>

	Backport from 2013-07-19 trunk r201051.

	PR target/57516
	* config/avr/lib1funcs-fixed.S (__roundqq3, __rounduqq3)
	(__round_s2_const, __round_u2_const)
	(__round_s4_const, __round_u4_const, __round_x8):
	Saturate result if addition result cannot be represented.

2013-07-09  Janis Johnson  <janisjo@codesourcery.com>

	* config.host (powerpc-*-eabispe*): Add t-fdpbit to tmake_file.

2013-06-19  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2013-06-04  Alan Modra  <amodra@gmail.com>
	* config/rs6000/ibm-ldouble.c: Enable for little-endian.

	2013-04-25  Alan Modra  <amodra@gmail.com>
	* config.host: Match little-endian powerpc-linux.

2013-06-08  Walter Lee  <walt@tilera.com>

	Backport from mainline:
	2013-06-08  Walter Lee  <walt@tilera.com>

	* config/tilepro/atomic.h: Don't include stdint.h or features.h.
	Replace int64_t with long long.  Add __extension__ where
	appropriate.

2013-06-06  Douglas B Rupp  <rupp@adacore.com>

	* config.host (arm-wrs-vxworks): Configure with other soft float.

2013-05-31  Richard Henderson  <rth@redhat.com>

	PR target/49146
	* unwind-dw2.c (UNWIND_COLUMN_IN_RANGE): New macro.
	(execute_cfa_program): Use it when storing to fs->regs.

2013-05-31  Release Manager
